<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="ar.edu.ort.tp3parcialrickandmorty.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="ar.edu.ort.tp3parcialrickandmorty.fragments.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="characterDto"
            app:argType="ar.edu.ort.tp3parcialrickandmorty.data.CharacterDto" />
    </fragment>
    <fragment
        android:id="@+id/favoritesFragment"
        android:name="ar.edu.ort.tp3parcialrickandmorty.fragments.FavoritesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" >
        <action
            android:id="@+id/action_favoritesFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/logoutFragment"
        android:name="ar.edu.ort.tp3parcialrickandmorty.fragments.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />
</navigation>