<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.SettingsFragment">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_settings_nightMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:minHeight="48dp"
        android:text="@string/nightMode"
        android:textSize="18sp"
        app:switchPadding="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_settings_search" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_settings_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:minHeight="48dp"
        android:text="@string/permitir_buscar_personajes"
        android:textSize="18sp"
        app:switchPadding="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_settings_favourites" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_settings_favourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="30dp"
        android:minHeight="48dp"
        android:text="@string/permitir_modificar_favoritos"
        android:textSize="18sp"
        app:switchPadding="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>